Fix button alignment

--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -45,11 +45,9 @@
   
   .modal-button-group {
     display: flex;
-    width: 80%;
-    position: absolute;
-    bottom: 0;
-    top: 295px;
-    right: 0;
+    justify-content: flex-end;
+    width: 70%;
+    margin-top: 20px;
   }
   
   .modal-submit-button,
@@ -60,13 +58,13 @@
     color: #fff;
     border: none;
     cursor: pointer;
-    margin-left:2px;
+    margin-left: 10px;
     font-size: 16px;
   }
   
   .modal-cancel-button {
     background-color: #706b6b;
-    margin-left: 60px;
+    margin-left: 10px;
   }
   
   .modal-input:focus {
